--- a/Schnitzel/style.css
+++ b/Schnitzel/style.css
@@ -1,1 +1,34 @@
-body { font-family: Arial, sans-serif; margin: 0; padding: 0; background-color: #f0f0f0; text-align: center; } header {background-color: #333; color: white; padding: 20px 0; } main { margin: 20px; } .hidden { display: none; } button {margin-top: 10px; padding: 10px 20px; font-size: 16px; } input[type="text"] { padding: 10px; width: 80%; margin: 10px0; font-size: 16px; }
+body {
+  font-family: Arial, sans-serif; 
+  margin: 0; 
+  padding: 0; 
+  background-color: #f0f0f0; 
+  text-align: center; 
+  } 
+
+header {
+  background-color: #333; 
+  color: white; 
+  padding: 20px 0; 
+  } 
+
+main { 
+  margin: 20px; 
+  } 
+
+.hidden {
+  display: none; 
+  } 
+
+button {
+  margin-top: 10px; 
+  padding: 10px 20px; 
+  font-size: 16px; 
+  } 
+
+input[type="text"] { 
+  padding: 10px; 
+  width: 80%; 
+  margin: 10px0; 
+  font-size: 16px; 
+  }
